# chem-agent

./: .env.example  .gitignore  CONVERSATION_HISTORY.md  DEPLOYMENT_SUMMARY.md  DIOXUS_FULL_APP_PLAN.md  DIOXUS_STATUS.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  SETUP.md  SPEED_COMPARISON.md  START_HERE_TOMORROW.txt  pyproject.toml  run.sh  speed_test.py  verify_setup.sh
data/lnp_data/: LNP_DESIGN_RULES.md  final_liver.csv  lnp_reaction.py
data/papers/: paper_summary.md  synthmol_rl.md
docs/: generate_agent_report.py  generate_pdf.py  generate_pdf_v1.py  generate_pdf_v2.py  generate_pdf_v3.py  generate_workflow_v3.py  response_length_standards.md  v2_summary.md  v3_summary.md
notes/: bedrock_jupyter_agents 1.ipynb  bedrock_langgraph_agents.ipynb  create_technical_summary.ipynb  create_workflow_diagram.ipynb  langgraph.ipynb  reactome_lnp_agent.ipynb  test_chatbot.ipynb
src/agents/: __init__.py  generative_ai_expert.yaml  lead_agent.yaml  lipid_design_expert.yaml  literature_scout.yaml  property_prediction_expert.yaml  reaction_expert.yaml  router.yaml  system.yaml
src/backend/: agent.py  config.py  main.py  rag.py  tools.py
src/frontend/reactome-ui/: README.md  angular.json  package-lock.json  package.json  vitest.config.ts
src/frontend/reactome-ui/src/: index.html  styles.css  test-setup.ts
src/standalone/: Cargo.toml  Dioxus.toml  index.html  run.sh  serve.py
src/standalone-desktop/: Cargo.toml  README.md  build.sh
src/standalone-desktop/assets/: app.css
src/standalone-desktop/src/: api.rs  main.rs  storage.rs  types.rs
src/standalone/src/: api.rs  main.rs  types.rs
src/standalone/src/pages/: chat.rs  workflow.rs
standalone/: Cargo.toml  index.html  run.sh  serve.py
standalone-desktop/: Cargo.toml  README.md  build.sh
standalone-desktop/assets/: app.css
standalone-desktop/src/: main.rs
standalone/assets/: full-app.css  main.css
standalone/src/: api.rs  main.rs  main_full.rs  storage.rs  types.rs
standalone/src/pages/: chat.rs  mod.rs
tests/backend/: conftest.py  test_agent.py  test_api.py  test_chemistry.py  test_tools.py
(+24 files in other folders)
