[project]
name = "ai-lnp"
version = "0.1.0"
description = "AI for Lipid Nanoparticle Design"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "gymnasium==0.29.1",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.9",
    "langchain-core>=1.2.9",
    "langgraph>=1.0.8",
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensordict>=0.10.0",
    "torchrl>=0.10.1",
    # PyTorch will be installed via install script
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
