[package]
name = "lnp-standalone"
version = "0.2.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Storage", "EventSource", "MessageEvent",
    "Request", "RequestInit", "RequestMode", "Headers",
    "Response", "ReadableStream", "ReadableStreamDefaultReader",
    "FormData", "Blob", "File", "FileList",
    "HtmlInputElement",
] }
js-sys = "0.3"
pulldown-cmark = "0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3"
